Don't use xattr 0.9.4

--- a/setup.cfg
+++ b/setup.cfg
@@ -104,6 +104,7 @@ test =
     WebTest>=2.0.16
     keystonemiddleware>=4.0.0,!=4.19.0
     wsgi_intercept>=1.4.1
+    xattr!=0.9.4  # https://github.com/gnocchixyz/gnocchi/issues/951
 test-swift =
     python-swiftclient
 
