--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,7 @@ setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py27-mysql-ceph-upgrade-from-4.0]
@@ -70,6 +71,7 @@ setenv =
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   gnocchiclient>=2.8.0
   pifpaf[ceph,gnocchi]>=0.13
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py37-postgresql-file-upgrade-from-4.1]
@@ -80,6 +82,7 @@ setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.1,<4.2
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py27-mysql-ceph-upgrade-from-4.1]
@@ -90,6 +93,7 @@ setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.1,<4.2
   gnocchiclient>=2.8.0
   pifpaf[ceph,gnocchi]>=0.13
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py37-postgresql-file-upgrade-from-4.2]
@@ -100,6 +104,7 @@ setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.2,<4.3
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:py27-mysql-ceph-upgrade-from-4.2]
@@ -110,6 +115,7 @@ setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.2,<4.3
   gnocchiclient>=2.8.0
   pifpaf[ceph,gnocchi]>=0.13
+  xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:pep8]
