Replace hacking by flake8 + extensions
Since hacking is not maintained anymore and depends on an old flake8 version,
replace it with flake8 + extensions.

--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,14 @@ deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.3,<4.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:pep8]
-deps = hacking>=0.12,<0.13
+basepython = python3
+deps = flake8
+       flake8-import-order
+       flake8-blind-except
+       flake8-builtins
+       flake8-docstrings
+       flake8-rst-docstrings
+       flake8-logging-format
 commands = flake8
 
 [testenv:py27-cover]
@@ -82,7 +89,9 @@ commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr
 [flake8]
 exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
 show-source = true
-enable-extensions = H904
+ignore = D100,D101,D102,D103,D104,D105,D107,A002,A003,G200,G201
+enable-extensions=G
+application-import-names = gnocchi
 
 [testenv:docs]
 basepython = python3
