--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,7 @@ prometheus =
 amqp1:
     python-qpid-proton>=0.17.0
 doc =
-    sphinx<1.6.0
+    sphinx
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
     PyYAML
