--- a/setup.cfg
+++ b/setup.cfg
@@ -82,7 +82,7 @@ prometheus =
     python-snappy
     protobuf
 doc =
-    sphinx<1.6.0
+    sphinx
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
     PyYAML
