--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ ceph_recommended_lib =
 ceph_alternative_lib =
     python-rados>=12.2.0 # not available on pypi
 doc =
-    sphinx<1.6.0
+    sphinx
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
     PyYAML
