--- a/tox.ini
+++ b/tox.ini
@@ -105,24 +105,10 @@ setenv = GNOCCHI_STORAGE_DEPS=file
          GNOCCHI_TEST_DEBUG=1
 install_command = pip install -U {opts} {packages}
 deps = {[testenv:docs]deps}
-       sphinxcontrib-versioning
        setuptools
-# for < 4.3 doc
-       pbr
-       WebOb<1.8
-# for <= 4.2 doc
-       scipy
-# for <= 4.1 doc
-       pandas
-# for 3.x doc
-       lz4>=0.9,<=0.13
-       oslotest
-       oslosphinx
-       retrying
 commands =
     rm -rf doc/build/html
-    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
-    bash tools/validate_docs.sh
+    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
