Switch from oslo.middleware to internal proxy converter

--- a/gnocchi/rest/api-paste.ini
+++ b/gnocchi/rest/api-paste.ini
@@ -17,13 +17,13 @@ use = egg:Paste#urlmap
 /healthcheck = healthcheck
 
 [pipeline:gnocchiv1+noauth]
-pipeline = http_proxy_to_wsgi gnocchiv1
+pipeline = gnocchiv1
 
 [pipeline:gnocchiv1+keystone]
-pipeline = http_proxy_to_wsgi keystone_authtoken gnocchiv1
+pipeline = keystone_authtoken gnocchiv1
 
 [pipeline:gnocchiversions_pipeline]
-pipeline = http_proxy_to_wsgi gnocchiversions
+pipeline = gnocchiversions
 
 [app:gnocchiversions]
 paste.app_factory = gnocchi.rest.app:app_factory
@@ -35,10 +35,6 @@ root = gnocchi.rest.api.V1Controller
 
 [filter:keystone_authtoken]
 use = egg:keystonemiddleware#auth_token
-oslo_config_project = gnocchi
-
-[filter:http_proxy_to_wsgi]
-use = egg:oslo.middleware#http_proxy_to_wsgi
 oslo_config_project = gnocchi
 
 [app:healthcheck]
