cleanup README.rst to upload to pypi
seems long_description needs to render cleanly to upload to pypi:
https://github.com/pypa/warehouse/issues/5890

related: #1025

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = gnocchi
 url = http://gnocchi.xyz
 description = Metric as a Service
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 author = Gnocchi developers
 author_email = invalid@gnocchi.xyz
 classifier =
