cleanup README.rst to upload to pypi
seems long_description needs to render cleanly to upload to pypi:
https://github.com/pypa/warehouse/issues/5890

related: #1025
(cherry picked from commit d12a3fb53651aefc51e3d05e07151ac5ac53d14e)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = gnocchi
-url = http://launchpad.net/gnocchi
+url = http://gnocchi.xyz
 summary = Metric as a Service
-description-file =
+description-file = 
     README.rst
 author = Gnocchi developers
 home-page = http://gnocchi.xyz
