--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,10 @@
 [metadata]
 name = gnocchi
-url = http://gnocchi.xyz
+url = http://gnocchi.osci.io
 description = Metric as a Service
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 author = Gnocchi developers
-author_email = invalid@gnocchi.xyz
 classifier =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
