--- a/tox.ini
+++ b/tox.ini
@@ -98,7 +98,7 @@ setenv = GNOCCHI_TEST_DEBUG=1
 commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rst doc/source
            pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
 
-[testenv:docs-gnocchi.xyz]
+[testenv:docs-gnocchi-web]
 basepython = python2.7
 whitelist_externals = bash rm
 setenv = GNOCCHI_STORAGE_DEPS=file
