Pin dulwich to <= 0.19.16
Needed for python2 support.

(cherry picked from commit 5551eca4454967c09093a8fe460346a3a23b5424)

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,6 +83,7 @@ prometheus =
     python-snappy
     protobuf
 doc =
+    dulwich<=0.19.16
     sphinx
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
