--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.4
-envlist = py{37,27}-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8
+envlist = py37-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8
 skipsdist = True
 
 [testenv]
@@ -57,11 +57,11 @@ recreate = True
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   pifpaf[gnocchi]>=0.13
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
-[testenv:py27-mysql-ceph-upgrade-from-4.0]
+[testenv:py37-mysql-ceph-upgrade-from-4.0]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
@@ -69,7 +69,7 @@ setenv =
     GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
     PYTHONWARNINGS=ignore
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   pifpaf[ceph,gnocchi]>=0.13
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
@@ -81,17 +81,17 @@ recreate = True
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.1,<4.2
   pifpaf[gnocchi]>=0.13
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
-[testenv:py27-mysql-ceph-upgrade-from-4.1]
+[testenv:py37-mysql-ceph-upgrade-from-4.1]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.1,<4.2
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   pifpaf[ceph,gnocchi]>=0.13
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
@@ -103,27 +103,28 @@ recreate = True
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.2,<4.3
   pifpaf[gnocchi]>=0.13
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
 
-[testenv:py27-mysql-ceph-upgrade-from-4.2]
+[testenv:py37-mysql-ceph-upgrade-from-4.2]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.2,<4.3
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   pifpaf[ceph,gnocchi]>=0.13
   xattr!=0.9.4
 commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
 
 [testenv:pep8]
+basepython = python3
 deps = hacking>=0.12,<0.13
 commands = flake8
 
-[testenv:py27-cover]
-commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr --coverage --testr-args="{posargs}"
+[testenv:py37-cover]
+commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py testr --coverage --testr-args="{posargs}"
 
 [flake8]
 exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
@@ -142,31 +143,19 @@ deps =
     doc8
 setenv = GNOCCHI_TEST_DEBUG=1
 commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rst doc/source
-           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
+           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py build_sphinx -W
 
-[testenv:docs-gnocchi.xyz]
-basepython = python2.7
+[testenv:docs-gnocchi-web]
+basepython = python3
 whitelist_externals = bash rm
 setenv = GNOCCHI_STORAGE_DEPS=file
          GNOCCHI_TEST_DEBUG=1
+install_command = pip install -U {opts} {packages}
 deps = {[testenv:docs]deps}
-       sphinxcontrib-versioning
-# for < 4.3 doc
-       pbr
-       WebOb<1.8
-# for <= 4.2 doc
-       scipy
-# for <= 4.1 doc
-       pandas
-# for 3.x doc
-       lz4>=0.9,<=0.13
-       oslotest
-       oslosphinx
-       retrying
+       setuptools
 commands =
     rm -rf doc/build/html
-    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- sphinx-versioning build doc/source doc/build/html
-    bash tools/validate_docs.sh
+    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
