Fix upgrade testing command not found
There is a issue when executing pifpaf directly
from tox, something with psutil/subprocess interaction
that makes it not find the run-upgrade-tests.sh script.

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.0,<4.1
   pifpaf[gnocchi]>=0.13
   gnocchiclient>=2.8.0,!=7.0.7
   xattr!=0.9.4
-commands = pifpaf --env-prefix INDEXER run postgresql {toxinidir}/run-upgrade-tests.sh {posargs}
+commands = {toxinidir}/run-upgrade-tests.sh postgresql-file
 
 [testenv:py37-mysql-ceph-upgrade-from-4.0]
 # We should always recreate since the script upgrade
@@ -116,7 +116,7 @@ deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.2,<4.3
   gnocchiclient>=2.8.0,!=7.0.7
   pifpaf[ceph,gnocchi]>=0.13
   xattr!=0.9.4
-commands = pifpaf --env-prefix INDEXER run mysql -- pifpaf --env-prefix STORAGE run ceph {toxinidir}/run-upgrade-tests.sh {posargs}
+commands = {toxinidir}/run-upgrade-tests.sh mysql-ceph
 
 [testenv:pep8]
 basepython = python3
