--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ deps =
    .[test,redis,prometheus,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
    {env:GNOCCHI_TEST_TARBALLS:}
    cliff!=2.9.0
+   gnocchiclient>=2.8.0,!=7.0.7
 commands =
     {toxinidir}/run-tests.sh {posargs}
     {toxinidir}/run-func-tests.sh {posargs}
@@ -124,7 +125,7 @@ deps = hacking>=0.12,<0.13
 commands = flake8
 
 [testenv:py37-cover]
-commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py testr --coverage --testr-args="{posargs}"
+commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr --coverage --testr-args="{posargs}"
 
 [flake8]
 exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
@@ -143,7 +144,7 @@ deps =
     doc8
 setenv = GNOCCHI_TEST_DEBUG=1
 commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rst doc/source
-           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py build_sphinx -W
+           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
 
 [testenv:docs-gnocchi-web]
 basepython = python3
