--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ deps =
    .[test,redis,prometheus,amqp1,{env:GNOCCHI_STORAGE_DEPS:},{env:GNOCCHI_INDEXER_DEPS:}]
    {env:GNOCCHI_TEST_TARBALLS:}
    cliff!=2.9.0
+   gnocchiclient>=2.8.0,!=7.0.7
 commands =
     {toxinidir}/run-tests.sh {posargs}
     {toxinidir}/run-func-tests.sh {posargs}
@@ -57,7 +58,7 @@ recreate = True
 setenv = GNOCCHI_VARIANT=test,postgresql,file
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.3,<4.4
   pifpaf[gnocchi]>=0.13
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   xattr!=0.9.4
 commands = {toxinidir}/run-upgrade-tests.sh postgresql-file
 
@@ -67,7 +68,7 @@ commands = {toxinidir}/run-upgrade-tests.sh postgresql-file
 recreate = True
 setenv = GNOCCHI_VARIANT=test,mysql,ceph,ceph_recommended_lib
 deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.3,<4.4
-  gnocchiclient>=2.8.0
+  gnocchiclient>=2.8.0,!=7.0.7
   pifpaf[ceph,gnocchi]>=0.13
   xattr!=0.9.4
 commands = {toxinidir}/run-upgrade-tests.sh mysql-ceph
@@ -78,7 +79,7 @@ deps = hacking>=0.12,<0.13
 commands = flake8
 
 [testenv:py37-cover]
-commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py testr --coverage --testr-args="{posargs}"
+commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr --coverage --testr-args="{posargs}"
 
 [flake8]
 exclude = .tox,.eggs,doc,gnocchi/rest/prometheus/remote_pb2.py
@@ -97,7 +98,7 @@ deps =
     doc8
 setenv = GNOCCHI_TEST_DEBUG=1
 commands = doc8 --ignore-path doc/source/rest.rst,doc/source/comparison-table.rst doc/source
-           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py build_sphinx -W
+           pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx -W
 
 [testenv:docs-gnocchi-web]
 basepython = python3
@@ -109,7 +110,7 @@ deps = {[testenv:docs]deps}
        setuptools
 commands =
     rm -rf doc/build/html
-    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python3 setup.py build_sphinx
+    pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py build_sphinx
 
 [doc8]
 ignore-path = doc/source/rest.rst,doc/source/comparison-table.rst
