--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: bionic
 language: generic
 sudo: required
 
@@ -12,11 +13,11 @@ env:
   - TARGET: docs
   - TARGET: docs-gnocchi-web
 
-  - TARGET: py37-mysql-ceph-upgrade-from-4.3
-  - TARGET: py37-postgresql-file-upgrade-from-4.3
+  - TARGET: py36-mysql-ceph-upgrade-from-4.3
+  - TARGET: py36-postgresql-file-upgrade-from-4.3
 
-  - TARGET: py37-mysql
-  - TARGET: py37-postgresql
+  - TARGET: py36-mysql
+  - TARGET: py36-postgresql
 
 before_script:
   # NOTE(sileht): We need to fetch all tags/branches for documentation.
