--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 2.4
-envlist = py37-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8
+envlist = py36-{postgresql,mysql}{,-file,-swift,-ceph,-s3},pep8
 skipsdist = True
 
 [testenv]
 skip_install = True
-sitepackages = False
+sitepackages = True
 passenv = LANG GNOCCHI_TEST_* AWS_*
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVER=file
@@ -51,7 +51,7 @@ commands =
     {toxinidir}/run-tests.sh {posargs}
     {toxinidir}/run-func-tests.sh {posargs}
 
-[testenv:py37-postgresql-file-upgrade-from-4.3]
+[testenv:py36-postgresql-file-upgrade-from-4.3]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
@@ -62,7 +62,7 @@ deps = gnocchi[{env:GNOCCHI_VARIANT}]>=4.3,<4.4
   xattr!=0.9.4
 commands = {toxinidir}/run-upgrade-tests.sh postgresql-file
 
-[testenv:py37-mysql-ceph-upgrade-from-4.3]
+[testenv:py36-mysql-ceph-upgrade-from-4.3]
 # We should always recreate since the script upgrade
 # Gnocchi we can't reuse the virtualenv
 recreate = True
@@ -78,7 +78,7 @@ basepython = python3
 deps = hacking>=0.12,<0.13
 commands = flake8
 
-[testenv:py37-cover]
+[testenv:py36-cover]
 commands = pifpaf -g GNOCCHI_INDEXER_URL run postgresql -- python setup.py testr --coverage --testr-args="{posargs}"
 
 [flake8]
